--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<!-- Five -->
 				<section class="wrapper style1 align-center">
 					<div class="inner">
-						<h2>The video records our first success in live animal trial</h2>
+						<h2>The video records our first success in a live animal trial</h2>
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p> -->
 					</div>
 				</section>
@@ -162,8 +162,8 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 						</div> -->
 
-						<!-- Gallery
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
+						
+							<!-- <div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
