--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>System Design</h2>
-							<p>We have a rather simple but robust system design that allow us to accuate a pair of
+							<p>We have a rather simple but robust system design that allow us to manipulate a pair of
 								 &#8960 4.5mm robotic arms inside the human body while all other electronic components resides outside.<br>
 
 								</p>
@@ -126,7 +126,7 @@
 						<div class="content">
 							<h2>AI-powered</h2>
 							<p>One of the biggest challenges in minially invasive surgery is that the robotic arms are
-								too small to mount any sensors. Hence, the operating surgeon has no feedback from the tissue.<br>
+								too small to mount any sensors on them. Hence, the operating surgeon has no feedback from the tissue.<br>
 								We use a <b>CNN-multi_LSTM hybrid architecture</b> to realize haptic feedback by only accessing proximal-end sensory data.
 							</p>
 							<ul class="actions stacked">
@@ -140,7 +140,13 @@
 					</section>
 				
 				<!-- Polyp-Video -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class='content'>
+							<h2>Polyp Detection</h2>
+							<p>Place holders</p>
+
+						</div>
+
 						<div class="video">
 							<video controls ><!-- autoplay -->
 								<source src="Detect_polyp_edited.mp4" type="video/mp4">
@@ -152,7 +158,7 @@
 					</section>
 				<!-- CNN-LSTM -->
 
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 							
 						<div class="content">
 							<h2>CNN-LSTM hybrid temporal network</h2>
