--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class='content'>
 							<h2>Polyp Detection</h2>
-							<p>The video on the left demonstrate how we leverage object detection to identify polyp in real-time.
+							<p>The video on the left demonstrate how we leverage object detection(YOLO-v2) to identify polyp in real-time.
 								The next step is removal and suturing up the wound.
 							</p>
 
