--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
 								<article>
 									<a href="images/gallery/fulls/05.jpg" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
+									</a>
+								</article>
+							</section>
+						
 						<!-- Five
 					<section class="wrapper style1 align-center">
 						<div class="inner">
