finalized image attribute

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</ul>
 						</div>
 						
-						<div class="imgbox">
+						<div class="image">
 							<img class="center-fit" src="paper_image/2.Components.png" alt="" />
 						</div>
 						
@@ -110,7 +110,7 @@
 								<li><a href="https://www.researchgate.net/publication/338254940_Sewing_up_the_Wound_A_Robotic_Suturing_System_for_Flexible_Endoscopy" class="button">Learn More</a></li>
 							</ul>
 						</div>
-						<div class="imgbox">
+						<div class="image">
 							<img class='center-fit' src="images/OVERVIEW_wenjie.png" alt="" />
 						</div>
 					</section>
